# ladybug

./: CMakeLists.txt
.github/workflows/: benchmark-workflow.yml  build-and-deploy.yml  business-intelligence-benchmark.yml  ci-workflow.yml  clickbench-workflow.yml  deploy-extension.yml  interactive-v1-benchmark.yml  java-workflow.yml  ldbc-fintech-benchmark-workflow.yml  linux-wheel-workflow.yml  lsqb-benchmark-workflow.yml  mac-wheel-workflow.yml  multiplatform-build-test.yml  precompiled-bin-workflow.yml  publish-python-fork.yml  python-wheel-workflow.yml  release-artifacts.yml  simsimd-dispatch-test.yml  windows-wheel-workflow.yml
extension/: extension_config.cmake
extension/fts/test/test_files/: basic.test
scripts/: update-nightly-build-version.py
scripts/extension/: PRODUCTION_RELEASES
scripts/pip-package/: package_tar.py  setup.py
src/binder/bind/: bind_extension.cpp
src/extension/: extension_manager.cpp
src/include/extension/: extension_manager.h
src/processor/operator/simple/: install_extension.cpp  load_extension.cpp
test/include/test_runner/: test_parser.h
test/test_runner/: test_parser.cpp
tools/python_api/: pyproject.toml
